puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Membership.Subscriptions/content/Views/Users/Subscriptions.cshtml.pp
@{
    ViewBag.Title = "User Details";
    Layout = "~/Views/Shared/_Folder.cshtml";
}

@using $rootnamespace$.Extensions
@model $rootnamespace$.Models.Users.UserViewModel

<h2>John Doe</h2>


@Html.MvcSiteMap("Modules").Tabs(2,true,false,1)

asdf